--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Oxygen = "df9a0d86-3283-4920-82dc-4555fc0d1d8b"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
