--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+JSONBase = "2e7fc8d9-e5f8-4569-a7b1-cf20c7cf9c71"
 JSONTables = "b9914132-a727-11e9-1322-f18e41205b0b"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
@@ -20,6 +21,7 @@ OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Oxygen = "df9a0d86-3283-4920-82dc-4555fc0d1d8b"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+SymbolicIndexingInterface = "2efcf032-c050-4f8e-a9bb-153293bab1f5"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
