--- a/Project.toml
+++ b/Project.toml
@@ -4,17 +4,20 @@ authors = ["anand jain <anandj@uchicago.edu>"]
 version = "0.1.0"
 
 [deps]
+AdvancedPS = "576499cb-2369-40b2-a588-c64705576edc"
 AlgebraicPetri = "4f99eebe-17bf-4e98-b6a1-2c4f205a959b"
 Bijections = "e2ed5e7c-b2de-5872-ae92-c73ca462fb04"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+EasyModelAnalysis = "ef4b24a4-a090-4686-a932-e7e56a5a83bd"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 JSONBase = "2e7fc8d9-e5f8-4569-a7b1-cf20c7cf9c71"
 JSONTables = "b9914132-a727-11e9-1322-f18e41205b0b"
+Libtask_jll = "3ae2931a-708c-5973-9c38-ccf7496fb450"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
